--- a/index.html
+++ b/index.html
@@ -586,19 +586,19 @@
 
           <div class="col-lg-8 mt-5 mt-lg-0">
 
-            <form action="https://api.web3forms.com/submit" id = "form" method="post" role="form" class="php-email-form">
+            <form action="https://api.web3forms.com/submit"  method="POST" class="php-email-form_new">
               <input type="hidden" name="access_key" value="b3d2b2da-c0c1-4117-a0cc-b4a7bd66efbf" />
               <input type="hidden" name="subject" value="New Submission from Web3Forms" />
               <div class="row">
                 <div class="col-md-6 form-group">
-                  <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
+                  <input type="text" name="name" class="form-control" placeholder="Your Name" required>
                 </div>
                 <div class="col-md-6 form-group mt-3 mt-md-0">
-                  <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" required>
+                  <input type="email" class="form-control" name="email" placeholder="Your Email" required>
                 </div>
               </div>
               <div class="form-group mt-3">
-                <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" required>
+                <input type="text" class="form-control" name="subject" placeholder="Subject" required>
               </div>
               <div class="form-group mt-3">
                 <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
@@ -608,7 +608,8 @@
                 <div class="error-message"></div>
                 <div class="sent-message">Your message has been sent. Thank you!</div>
               </div>
-              <div class="text-center"><button type="submit">Send Message</button></div>
+              
+              <div class="text-center" ><button type="submit" >Send Message</button></div>
             </form>
 
           </div>
