--- a/index.html
+++ b/index.html
@@ -53,7 +53,10 @@
 
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex justify-content-center flex-column justify-content-center">
-    <div class="container" data-aos="zoom-in" data-aos-delay="100">
+
+    <div class="container" data-aos="zoom-in" data-aos-delay="100" style="position:relative; top: -50px">
+
+      <img src="assets/img/profile-pic.png" alt="" height="200em" style="margin-bottom: 50px; border-radius:100px;">
       <h1>Kedar Vaidya</h1>
       <p>I'm a <span class="typed" data-typed-items="Developer, Keyboardist, Photographer"></span></p>
       <div class="social-links">
