--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
       <h1>Kedar Vaidya</h1>
       <p>I'm a <span class="typed" data-typed-items="Developer, Keyboardist, Photographer"></span></p>
       <div class="social-links">
-        <a href="#" class="twitter"><i class="bx bxl-github"></i></a>
-        <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href="https://github.com/Kedar-V" class="twitter"><i class="bx bxl-github"></i></a>
+        <a href="https://www.linkedin.com/in/kkedarvaidya/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
       </div>
     </div>
   </section><!-- End Hero -->
