--- a/index.html
+++ b/index.html
@@ -626,11 +626,12 @@
       <h3>Kedar Vaidya</h3>
       <p>I love to code, play keyboard, travel and workout. <br>I'm a tech geek and like to binge on unboxing videos</p>
       <div class="social-links">
-        <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
+        <!-- <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
         <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
         <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-        <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a> -->
+        <a href="https://github.com/Kedar-V" class="twitter"><i class="bx bxl-github"></i></a>
+        <a href="https://www.linkedin.com/in/kkedarvaidya/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
       </div>
       <div class="credits">
       </div>
