--- a/project_details/nlp.html
+++ b/project_details/nlp.html
@@ -19,16 +19,16 @@
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
-  <link href="assets/vendor/aos/aos.css" rel="stylesheet">
-  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-  <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
-  <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-  <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+  <link href="../assets/vendor/aos/aos.css" rel="stylesheet">
+  <link href="../assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="../assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="../assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+  <link href="../assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+  <link href="../assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
   <!-- Template Main CSS File -->
-  <link href="assets/css/project-details.css" rel="stylesheet">
-  <link href="assets/css/style.css" rel="stylesheet">
+  <link href="../assets/css/project-details.css" rel="stylesheet">
+  <link href="../assets/css/style.css" rel="stylesheet">
 
   <!-- =======================================================
   * Template Name: MyResume - v4.9.2
@@ -40,17 +40,17 @@
 
 <body>
 
-  <div class="container-fluid" style=" position: absolute; height: 100%;">
-    <div class="row" style="height: 100%;">
-        <div class="col-md-5" style="display: flex; justify-content: center; padding-left: 0px; padding-right: 0px;">
-          <img src="assets/img/portfolio/computerVision.jpg" alt="project-image" >
+  <div class="container-fluid" style=" position: absolute; width: 100%;">
+    <div class="row" style="width: 100%;">
+        <div class="col-md-6" style="display: flex; justify-content: center; padding-left: 0px; padding-right: 0px;">
+          <img src="../assets/img/portfolio_details/nlp2.jpeg" alt="project-image">
         </div><!-- / column -->
 
-        <div class="col-md-7" style="display: flex; flex-direction: column; justify-content: flex-start;">
+        <div class="col-md-6" style="display: flex; flex-direction: column; justify-content: flex-start;">
 
           <div class="project-info-box" >
             <div class="resume-item">
-              <h4>Myntra Designs Pvt. Ltd. </h4>
+              <h4>Natural Language Processing Lab </h4>
             </div>
           </div><!-- / project-info-box -->
 
@@ -59,12 +59,12 @@
               <p class="mb-0">This is a multi-hop questions answering task which requires reasoning over entire paragraph to find the correct answer. In this study I have proposed a novel pipeline for solving multiple choice question which leverages various NLP techniques such as coreference resolution, information retrieval in the form of knowledge graphs, knowledge graph embeddings and a unique answer selection modeule which takes into account the lexical differences between the predicted answer and the given answer choices.</p>
           </div><!-- / project-info-box -->
           
-          <div class="project-info-box">
+          <!-- <div class="project-info-box">
             <div class="social-links-details">
-              <a href="#" style="color: rgb(0, 0, 0);"><i class="bx bxl-github bx-md bx-tada-hover"></i></a>
-              <a href="#" ><i class="bx bxl-linkedin bx-md bx-tada-hover"></i></a>
+              <a href="https://github.com/Kedar-V/NLP-Question-Answering-System" style="color: rgb(0, 0, 0);"><i class="bx bxl-github bx-md bx-tada-hover"></i></a>
+              <a href="https://www.linkedin.com/in/kkedarvaidya/" ><i class="bx bxl-linkedin bx-md bx-tada-hover"></i></a>
             </div>
-          </div><!-- / project-info-box -->
+          </div>/ project-info-box -->
 
         </div><!-- / column -->
 
