Added Card Desc for portfolio

--- a/index.html
+++ b/index.html
@@ -119,9 +119,9 @@
               <ul>
                 <li>Pneumonia detection using Ensemble of Modified ViT-YOLO models, IEEE Xplore (Accepted for publication).</li>
                 <li>Grid Synchronisation using Machine Learning, IEEE Xplore (Accepted for publication).</li>
-                <li> Closed Domain Multiple Choice Question Answering System For Science Questions, ICICT LONDON,Springer Journal <a href="https://link.springer.com/chapter/10.1007/978-981-19-1607-6_65"><i class='bx bx-plus-external'></i></a> .</li>
-                <li>High Gain Amplification Using Oscillating Quiescent Point, STPEC <a href="https://ieeexplore.ieee.org/document/9297702"><i class='bx bx-plus-external'></i></a> .</li>
-                <li>Automatic Air Blast Flushing of Electrostatic Precipitator, CONECCT <a href="https://ieeexplore.ieee.org/document/9198534" class="twitter"><i class='bx bx-plus-external'></i></a> .</li>
+                <li> Closed Domain Multiple Choice Question Answering System For Science Questions, ICICT London, Springer LNNS Series <a href="https://link.springer.com/chapter/10.1007/978-981-19-1607-6_65"><i class='bx bx-plus-external'></i></a> .</li>
+                <li>High Gain Amplification Using Oscillating Quiescent Point, IEEE <a href="https://ieeexplore.ieee.org/document/9297702"><i class='bx bx-plus-external'></i></a> .</li>
+                <li>Automatic Air Blast Flushing of Electrostatic Precipitator, IEEE <a href="https://ieeexplore.ieee.org/document/9198534" class="twitter"><i class='bx bx-plus-external'></i></a> .</li>
               </ul>
             </div>
 
@@ -211,8 +211,8 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/nlp2 (3).jpeg" class="img-thumbnail" alt="">
               <div class="portfolio-info">
-                <h4>Card 2</h4>
-                <p>Card</p>
+                <h4>Question Answering System Using <br> NLP</h4>
+                <!-- <p>Card</p> -->
                 <div class="portfolio-links">
                   <!-- <a href="assets/img/portfolio/nlp2 (3).jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Closed Domain Multiple Choice Question Answering System For Science Questions"><i class="bx bx-plus"></i></a> -->
                   <a href="project_details/nlp.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-plus"></i></a>
@@ -226,8 +226,7 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/cv2 (1).jpeg" class="img-thumbnail" alt="">
               <div class="portfolio-info">
-                <h4>Card 2</h4>
-                <p>Card</p>
+                <h4>Pneumonia Detection using <br> Computer Vision</h4>
                 <div class="portfolio-links">
                   <!-- <a href="assets/img/portfolio/cv2 (1).jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Pneumonia detection using Ensemble of ViT-YOLO models"><i class="bx bx-plus"></i></a> -->
                   <a href="project_details/cv.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-plus"></i></a>
@@ -242,8 +241,7 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/grid (1).jpeg" class="img-thumbnail" alt="">
               <div class="portfolio-info">
-                <h4>Card 2</h4>
-                <p>Card</p>
+                <h4>Grid Synchronisation using <br> Machine Learning</h4>
                 <div class="portfolio-links">
                   <!-- <a href="assets/img/portfolio/grid (1).jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Grid Synchronisation using Machine Learning"><i class="bx bx-plus"></i></a> -->
                   <a href="project_details/grid.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-plus"></i></a>
@@ -258,8 +256,8 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/VR (1).jpeg" class="img-thumbnail" alt="">
               <div class="portfolio-info">
-                <h4>Card 2</h4>
-                <p>Card</p>
+                <h4>Virtual Reality Mall <br> using Unity</h4>
+                <!-- <p>Card</p> -->
                 <div class="portfolio-links">
                   <!-- <a href="assets/img/portfolio/VR (1).jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="VR Mall using Unity"><i class="bx bx-plus"></i></a> -->
                   <a href="project_details/vr.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-plus"></i></a>
@@ -273,8 +271,8 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/fashion (1).jpeg" class="img-thumbnail" alt="">
               <div class="portfolio-info">
-                <h4>Card 1</h4>
-                <p>Card</p>
+                <h4>Fashion Trend Analysis and <br > Prediction App</h4>
+                <!-- <p>Card</p> -->
                 <div class="portfolio-links">
                   <!-- <a href="assets/img/portfolio/fashion (1).jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Fashion Trend Analysis and Prediction App"><i class="bx bx-plus"></i></a> -->
                   <a href="project_details/fashion.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-plus"></i></a>
@@ -288,8 +286,8 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/renewable (1).jpeg" class="img-thumbnail" alt="">
               <div class="portfolio-info">
-                <h4>Card 3</h4>
-                <p>Card</p>
+                <h4>Renewable Energy Estimation using <br> Machine Learning</h4>
+                <!-- <p>Card</p> -->
                 <div class="portfolio-links">
                   <!-- <a href="assets/img/portfolio/renewable (1).jpeg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 3"><i class="bx bx-plus"></i></a> -->
                   <a href="project_details/renewable.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Portfolio Details"><i class="bx bx-plus"></i></a>
