--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@
                 <li>Pneumonia detection using Ensemble of Modified ViT-YOLO models, IEEE Xplore (Accepted for publication).</li>
                 <li>Grid Synchronisation using Machine Learning, IEEE Xplore (Accepted for publication).</li>
                 <li> Closed Domain Multiple Choice Question Answering System For Science Questions, ICICT London, Springer LNNS Series <a href="https://link.springer.com/chapter/10.1007/978-981-19-1607-6_65"><i class='bx bx-plus-external'></i></a> .</li>
-                <li>High Gain Amplification Using Oscillating Quiescent Point, IEEE <a href="https://ieeexplore.ieee.org/document/9297702"><i class='bx bx-plus-external'></i></a> .</li>
-                <li>Automatic Air Blast Flushing of Electrostatic Precipitator, IEEE <a href="https://ieeexplore.ieee.org/document/9198534" class="twitter"><i class='bx bx-plus-external'></i></a> .</li>
+                <li>High Gain Amplification Using Oscillating Quiescent Point, IEEE <a href="https://ieeexplore.ieee.org/document/9297702"><i class='bx bx-plus-external'></i></a></li>
+                <li>Automatic Air Blast Flushing of Electrostatic Precipitator, IEEE <a href="https://ieeexplore.ieee.org/document/9198534" class="twitter"><i class='bx bx-plus-external'></i></a></li>
               </ul>
             </div>
 
