--- a/project_details/renewable.html
+++ b/project_details/renewable.html
@@ -40,8 +40,8 @@
 
 <body>
 
-  <div class="container-fluid" style=" position: absolute; width: 100%;">
-    <div class="row" style="width: 100%;">
+  <div class="container-fluid" style=" position: absolute; height: 100%;">
+    <div class="row" style="height: 100%;">
         <div class="col-md-6" style="display: flex; justify-content: center; padding-left: 0px; padding-right: 0px;">
           <img src="../assets/img/portfolio_details/renewable.jpeg" alt="project-image">
         </div><!-- / column -->
