--- a/project_details/vr.html
+++ b/project_details/vr.html
@@ -40,15 +40,15 @@
 
 <body>
 
-  <div class="container-fluid" style=" position: absolute; width: 100%;">
-    <div class="row" style="width: 100%;">
+  <div class="container-fluid" style=" position: absolute; height: 100%;">
+    <div class="row" style="height: 100%;">
         <div class="col-md-6" style="display: flex; justify-content: center; padding-left: 0px; padding-right: 0px;">
           <img src="../assets/img/portfolio_details/VR.jpeg" alt="project-image">
         </div><!-- / column -->
 
-        <div class="col-md-6" style="display: flex; flex-direction: column; justify-content: flex-start; height: 100vh;">
+        <div class="col-md-6" style="display: flex; flex-direction: column; justify-content: flex-start;">
 
-          <div class="project-info-box" style="height: 15vh !important;">
+          <div class="project-info-box" >
             <div class="resume-item" >
               <h4>Myntra HackerRamp 2022 </h4>
             </div>
