--- a/project_details/cv.html
+++ b/project_details/cv.html
@@ -5,7 +5,6 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Portfolio Details - Personal Bootstrap Template</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -40,15 +39,15 @@
 
 <body>
 
-  <div class="container-fluid" style=" position: absolute; width: 100%;">
-    <div class="row" style="width: 100%;">
+  <div class="container-fluid" style=" position: absolute; height: 100%;">
+    <div class="row" style="height: 100%;">
         <div class="col-md-6" style="display: flex; justify-content: center; padding-left: 0px; padding-right: 0px;">
           <img src="../assets/img/portfolio_details/cv2.jpeg" alt="project-image">
         </div><!-- / column -->
 
-        <div class="col-md-6" style="display: flex; flex-direction: column; justify-content: flex-start; height: 100vh;">
+        <div class="col-md-6" style="display: flex; flex-direction: column; justify-content: flex-start;">
 
-          <div class="project-info-box" style="height: 15vh !important;" >
+          <div class="project-info-box" >
             <div class="resume-item">
               <h4>Computer Vision Lab </h4>
             </div>
