--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <div class="container" data-aos="zoom-in" data-aos-delay="100" style="position:relative; top: -50px">
 
       <img src="assets/img/profile-pic.png" alt="" height="200em" style="margin-bottom: 30px; border-radius:100px;">
-      <h1>Kedar Vaidya</h1>
+      <h1>Kedar</h1>
       <p>I'm a <span class="typed" data-typed-items="Developer, Keyboardist, Photographer"></span></p>
       <div class="social-links">
         <a href="https://github.com/Kedar-V" class="twitter"><i class="bx bxl-github"></i></a>
